# langton-ant

./: .gitignore  README.md  generate_langton_ant_image.py  main.py  pyproject.toml
project/: ant.py  configs.py  grid.py  render_grid.py
project/enums/: ant_coordinates.py  color.py  grid_size.py
project/services/: ant_service.py  grid.py  grid_service.py  image.py  image_service.py
src/: ant.py  render_grid.py
src/entities/: ant.py  grid.py
src/enums/: ant.py  ant_coordinates.py  color.py  grid_size.py
src/services/: image.py  render.py
