[project]
name = "langton-ant"
version = "0.1.0"
description = ""
authors = [
    { name = "DorLex", email = "dorozhinskiysanya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
